# mohammadmk47

./: CMakeLists.txt  README.md  app
.github/workflows/: cmake-multi-platform.yml
src/core/: Database.h
src/ui/qml/: Sidebar.qml
